# COMP8501-GameEngine

./: CMakeLists.txt  COMP8051_Project_Design_Revised.docx  README.md
assets/: map1.tmx  sandbox_map.tmx
assets/animations/: bird_animations.xml  bull_animations.xml  human_animations.xml
src/: Game.cpp  Game.h  GameObject.cpp  GameObject.h  Map.cpp  Map.h  TextureManager.cpp  TextureManager.h  main.cpp
src/ecs/: Component.h  ComponentType.h  Entity.h  EventManager.h  ParticleGrid.h  ParticleGridSystem.h  World.cpp  World.h
src/ecs/event/: AudioEventQueue.h  BaseEvent.h  EventManager.h
src/ecs/system/: AnimationClip.h  AnimationSystem.h  BrushHUDRenderSystem.cpp  BrushHUDRenderSystem.h  CameraSystem.h  ColliderSyncSystem.cpp  ColliderSyncSystem.h  CollisionSystem.cpp  CollisionSystem.h  DestructionSystem.h  EventResponseSystem.cpp  EventResponseSystem.h  GravitySystem.h  HUDSystem.cpp  HUDSystem.h  KeyboardInputSystem.cpp  KeyboardInputSystem.h  MainMenuSystem.cpp  MainMenuSystem.h  MouseInputSystem.cpp  MouseInputSystem.h  MovementSystem.h  ParticleInteractionSystem.cpp  ParticleInteractionSystem.h  ParticleSimulationSystem.h  ParticleSpawnDeSpawnSystem.cpp  ParticleSpawnDeSpawnSystem.h  ParticleSyncSystem.cpp  ParticleSyncSystem.h  PreRenderSystem.h  RenderSystem.h  SpawnTimerSystem.h  SpriteOffsetSystem.cpp  SpriteOffsetSystem.h  UIRenderSystem.cpp  UIRenderSystem.h
src/manager/: AssetManager.cpp  AssetManager.h  AudioManager.cpp  AudioManager.h  Scene.cpp  Scene.h  SceneManager.h  TextureManager.cpp  TextureManager.h
src/scene/: Scene.cpp  Scene.h  SceneType.h
src/utils/: Collision.cpp  Collision.h  CollisionResolution.cpp  CollisionResolution.h  ParticleHelpers.h  ParticlePlacementHelper.cpp  ParticlePlacementHelper.h  RenderUtils.h  Vector2D.cpp  Vector2D.h
